ShakeCharity/ShakeSharityApp/force-app/main/default/objects/bde__Batch_Data_Entry_Config__c/bde__Batch_Data_Entry_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Batch Data Entry Config</label>
</CustomObject>