ShakeCharity/ShakeSharityApp/force-app/main/default/objects/bde__Batch_Data_Entry_Config__c/fields/bde__Allow_Blank_Opportunity_Names__c.field-meta.xml
<CustomField>
    <fullName>bde__Allow_Blank_Opportunity_Names__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If set, then Batch Data Entry will never name Opportunities, even if they are blank (not included on page).</inlineHelpText>
    <label>Allow Blank Opportunity Names</label>
    <type>Checkbox</type>
</CustomField>