ShakeCharity/ShakeSharityApp/force-app/main/default/objects/bde__Batch_Data_Entry_Config__c/fields/bde__Has_NPSP__c.field-meta.xml
<CustomField>
    <fullName>bde__Has_NPSP__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This value is automatically created, and automatically configures the Batch Entry tool to work with the Nonprofit Starter Pack for donation entries.</inlineHelpText>
    <label>Has NPSP</label>
    <type>Checkbox</type>
</CustomField>